# standup_buddy

./: .env.example  .gitignore  AGENTS.md  AUDIO_FILES_SUMMARY.md  LIVE_MODE_SUMMARY.md  OVERCONFIDENT_PATTERN_FIX.md  PERSONAS_GUIDE.md  README.md  VOICE_DEMO_README.md  demo.py  generate_all_personas.sh  generate_conversation_audio.py  generate_full_conversation_audio.py  hybrid_demo.py  list_smallest_voices.py  main.py  persona_comparison_demo.py  pyproject.toml  voice_demo_server.py
src/async_standup/: __init__.py  analyze_audio.py  conversation_agent.py  generate_audio.py  insight_engine.py  personas.py  storage.py  voice_generator.py  voice_session.py
static/: voice_demo.html
tests/: test_analyze_audio.py  test_generate_audio.py  test_insight_engine.py  test_integration.py  test_real_api_integration.py  test_storage.py
